--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -42,7 +42,7 @@
         <ion-button expand="block" (click)="scan()"
           ><ion-icon name="barcode-outline"></ion-icon>
         </ion-button>
-        <ion-input placeholder="Chave aqui" value={{valueInput}} />
+        <ion-input placeholder="Chave aqui" value="{{valueInput}}" />
       </div>
 
       <div>
@@ -77,7 +77,7 @@
       </ion-card>
 
       <ion-list-header>
-        <ion-label>Recebedor</ion-label>
+        <ion-label>Destinatário</ion-label>
       </ion-list-header>
       <ion-card>
         <ion-card-content>
@@ -152,8 +152,71 @@
               </ion-item>
             </ion-col>
           </ion-row>
+          <ion-button id="open-modal" expand="block"
+            >Seguir com entrega</ion-button
+          >
         </ion-card-content>
       </ion-card>
+      <ion-modal trigger="open-modal" (willDismiss)="onWillDismiss($event)">
+        <ng-template>
+          <ion-header>
+            <ion-toolbar>
+              <ion-buttons slot="start">
+                <ion-button (click)="cancel()">Cancelar</ion-button>
+              </ion-buttons>
+              <ion-title class="ion-text-center">Recebedor</ion-title>
+              <ion-buttons slot="end" class="ion-align-items-center">
+                <ion-button (click)="confirm()" [strong]="true"
+                  >Confirmar</ion-button
+                >
+              </ion-buttons>
+            </ion-toolbar>
+          </ion-header>
+          <ion-content class="ion-padding" class="">
+            <ion-card>
+              <ion-card-content>
+                <ion-list>
+                  <ion-item>
+                    <ion-input
+                      label="Nome"
+                      labelPlacement="floating"
+                      type="text"
+                      placeholder="Nome"
+                    ></ion-input>
+                  </ion-item>
+                  <ion-item>
+                    <ion-select
+                      label="Tipo de Documento"
+                      placeholder="Selecione"
+                    >
+                      <ion-select-option value="1">CPF</ion-select-option>
+                      <ion-select-option value="2">CNPJ</ion-select-option>
+                      <ion-select-option value="3">RG</ion-select-option>
+                    </ion-select>
+                  </ion-item>
+                  <ion-item>
+                    <ion-input
+                      label="Número"
+                      labelPlacement="floating"
+                      type="text"
+                      placeholder="Nome"
+                    ></ion-input>
+                  </ion-item>
+                  <ion-button slot="secondary">
+                    <ion-icon
+                      slot="start"
+                      name="camera-outline"
+                      size="large"
+                      class="ion-padding-horizontal"
+                    ></ion-icon>
+                    tirar foto
+                  </ion-button>
+                </ion-list>
+              </ion-card-content>
+            </ion-card>
+          </ion-content>
+        </ng-template>
+      </ion-modal>
     </ion-list>
   </ion-content>
 </div>
