--- a/src/app/pages/document/document.page.html
+++ b/src/app/pages/document/document.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="ion-padding">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Cadastro de Usuários</ion-title>
@@ -16,69 +16,91 @@
 
   <ion-card>
     <ion-card-content>
-      <ion-card-content [formGroup]="formDocument" (ngSubmit)="onSubmit()">
+      <form [formGroup]="documentForm" (ngSubmit)="onSubmit($event)">
         <ion-item>
-          <ion-label position="floating">Tipo</ion-label>
-          <ion-input formControlName="name"></ion-input>
+          <ion-input
+            type="text"
+            labelPlacement="floating"
+            label="Tipo"
+            formControlName="tipo"
+          />
         </ion-item>
         <ion-item>
-          <ion-label position="floating">Destinatário</ion-label>
-          <ion-input formControlName="email"></ion-input>
+          <ion-input
+            label="Destinatário"
+            labelPlacement="floating"
+            formControlName="destinatario"
+          />
         </ion-item>
         <ion-item>
-          <ion-label position="floating">cpf/cnpj</ion-label>
-          <ion-input formControlName="login"></ion-input>
+          <ion-input
+            labelPlacement="floating"
+            label="cpf/cnpj"
+            formControlName="login"
+          />
         </ion-item>
-        <ion-item>
-          <ion-label position="floating">Telefone</ion-label>
-          <ion-input formControlName="telefone"></ion-input>
-        </ion-item>
-      </ion-card-content>
-    </ion-card>
+
         <ion-list-header>
           <ion-label>Endereço recebedor</ion-label>
         </ion-list-header>
-        <ion-card>
-        <ion-card-content>
+
         <ion-row>
           <ion-col>
             <ion-item>
-              <ion-label position="floating">Rua</ion-label>
-              <ion-input formControlName="telefone"></ion-input>
+              <ion-input
+                labelPlacement="floating"
+                label="rua"
+                formControlName="rua"
+              />
             </ion-item>
           </ion-col>
           <ion-col size="12" size-sm="2">
             <ion-item>
-              <ion-label position="floating">N°</ion-label>
-              <ion-input formControlName="telefone"></ion-input>
+              <ion-input
+                formControlName="numero"
+                labelPlacement="floating"
+                label="numero"
+              />
             </ion-item>
           </ion-col>
         </ion-row>
         <ion-row>
           <ion-col size="12" size-sm="6">
             <ion-item>
-              <ion-label position="floating">Telefone</ion-label>
-              <ion-input formControlName="telefone"></ion-input>
+              <ion-input
+                labelPlacement="floating"
+                label="telefone"
+                formControlName="telefone"
+              />
             </ion-item>
           </ion-col>
           <ion-col>
             <ion-item>
-              <ion-label position="floating">CEP</ion-label>
-              <ion-input formControlName="telefone"></ion-input>
+              <ion-input
+                labelPlacement="floating"
+                label="cep"
+                formControlName="cep"
+              />
             </ion-item>
           </ion-col>
         </ion-row>
         <ion-row>
           <ion-col size="12" size-sm="10">
             <ion-item>
-              <ion-label position="floating">Cidade</ion-label>
-              <ion-input formControlName="telefone"></ion-input>
+              <ion-input
+                labelPlacement="floating"
+                label="cidade"
+                formControlName="cidade"
+              />
             </ion-item>
           </ion-col>
           <ion-col>
             <ion-item>
-              <ion-label position="floating">UF</ion-label>
-              <ion-input formControlName="telefone"></ion-input>
+              <ion-input
+                labelPlacement="floating"
+                label="uf"
+                formControlName="uf"
+              />
             </ion-item>
           </ion-col>
         </ion-row>
