--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -11,7 +11,7 @@
         <ion-icon name="person-circle-outline" slot="start"></ion-icon>
         <ion-label>Registrar novo Usuário</ion-label>
       </ion-item>
-      <ion-item (click)="goToRegisterDocument()">
+      <ion-item (click)="goToDocument()">
         <ion-icon name="document-attach" slot="start"></ion-icon>
         <ion-label>Registrar novo Documento</ion-label>
       </ion-item>
@@ -62,14 +62,19 @@
           <ion-row>
             <ion-col>
               <ion-item>
-                <ion-label>Nome:</ion-label>
-
-                <ion-input [readonly]="true" value="Manoel"></ion-input>
+                <ion-input
+                  [readonly]="true"
+                  value="Manoel"
+                  label="Nome:"
+                ></ion-input>
               </ion-item>
 
               <ion-item>
-                <ion-label>CPF/CNPJ:</ion-label>
-                <ion-input [readonly]="true" value="999999999999"></ion-input>
+                <ion-input
+                  label="CPF/CNPJ:"
+                  [readonly]="true"
+                  value="999999999999"
+                ></ion-input>
               </ion-item>
             </ion-col>
           </ion-row>
@@ -84,8 +89,8 @@
           <ion-row>
             <ion-col size="12" size-sm="8">
               <ion-item>
-                <ion-label>Nome:</ion-label>
                 <ion-input
+                  label="Nome:"
                   [readonly]="true"
                   value="Erick de Freitas Silva"
                 ></ion-input>
@@ -93,8 +98,11 @@
             </ion-col>
             <ion-col>
               <ion-item>
-                <ion-label>Data:</ion-label>
-                <ion-input [readonly]="true" value="dd/mm/aaaa"></ion-input>
+                <ion-input
+                  label="Data:"
+                  [readonly]="true"
+                  value="dd/mm/aaaa"
+                ></ion-input>
               </ion-item>
             </ion-col>
           </ion-row>
@@ -102,14 +110,21 @@
           <ion-row>
             <ion-col size="12" size-sm="7">
               <ion-item>
-                <ion-label>cpf/cnpj:</ion-label>
-                <ion-input [readonly]="true" value="069.265.586-71"></ion-input>
+                <ion-input
+                  label="CPF/CNPJ:"
+                  type="data"
+                  [readonly]="true"
+                  value="069.265.586-71"
+                ></ion-input>
               </ion-item>
             </ion-col>
             <ion-col>
               <ion-item>
-                <ion-label>Telefone</ion-label>
-                <ion-input [readonly]="true" value="(32)999902406"></ion-input>
+                <ion-input
+                  label="Telefone:"
+                  [readonly]="true"
+                  value="(32)999902406"
+                ></ion-input>
               </ion-item>
             </ion-col>
           </ion-row>
@@ -119,6 +134,7 @@
               <ion-item>
                 <ion-label>Endereço:</ion-label>
                 <ion-input
+                  label="Endereço:"
                   [readonly]="true"
                   value="Rua do Contorno"
                 ></ion-input>
@@ -126,8 +142,11 @@
             </ion-col>
             <ion-col>
               <ion-item>
-                <ion-label>Número:</ion-label>
-                <ion-input [readonly]="true" value="1001"></ion-input>
+                <ion-input
+                  label="Número:"
+                  [readonly]="true"
+                  value="1001"
+                ></ion-input>
               </ion-item>
             </ion-col>
           </ion-row>
@@ -135,20 +154,25 @@
           <ion-row>
             <ion-col size="12" size-sm="3">
               <ion-item>
-                <ion-label>CEP:</ion-label>
-                <ion-input [readonly]="true" value="06926558671"></ion-input>
+                <ion-input
+                  label="CEP:"
+                  [readonly]="true"
+                  value="06926558671"
+                ></ion-input>
               </ion-item>
             </ion-col>
             <ion-col size="12" size-sm="7">
               <ion-item>
-                <ion-label>Cidade:</ion-label>
-                <ion-input [readonly]="true" value="Juiz de Fora"></ion-input>
+                <ion-input
+                  label="Cidade:"
+                  [readonly]="true"
+                  value="Juiz de Fora"
+                ></ion-input>
               </ion-item>
             </ion-col>
             <ion-col size="12" size-sm="2">
               <ion-item>
-                <ion-label>UF:</ion-label>
-                <ion-input [readonly]="true" value="SP"></ion-input>
+                <ion-input label="UF:" [readonly]="true" value="SP"></ion-input>
               </ion-item>
             </ion-col>
           </ion-row>
@@ -164,7 +188,7 @@
               <ion-buttons slot="start">
                 <ion-button (click)="cancel()">Cancelar</ion-button>
               </ion-buttons>
-              <ion-title class="ion-text-center">Recebedor</ion-title>
+              <!-- <ion-title class="ion-text-center">Recebedor</ion-title> -->
               <ion-buttons slot="end" class="ion-align-items-center">
                 <ion-button (click)="confirm()" [strong]="true"
                   >Confirmar</ion-button
@@ -175,43 +199,56 @@
           <ion-content class="ion-padding" class="">
             <ion-card>
               <ion-card-content>
-                <ion-list>
-                  <ion-item>
-                    <ion-input
-                      label="Nome"
-                      labelPlacement="floating"
-                      type="text"
-                      placeholder="Nome"
-                    ></ion-input>
-                  </ion-item>
-                  <ion-item>
-                    <ion-select
-                      label="Tipo de Documento"
-                      placeholder="Selecione"
-                    >
-                      <ion-select-option value="1">CPF</ion-select-option>
-                      <ion-select-option value="2">CNPJ</ion-select-option>
-                      <ion-select-option value="3">RG</ion-select-option>
-                    </ion-select>
-                  </ion-item>
-                  <ion-item>
-                    <ion-input
-                      label="Número"
-                      labelPlacement="floating"
-                      type="text"
-                      placeholder="Nome"
-                    ></ion-input>
-                  </ion-item>
-                  <ion-button slot="secondary">
-                    <ion-icon
-                      slot="start"
-                      name="camera-outline"
-                      size="large"
-                      class="ion-padding-horizontal"
-                    ></ion-icon>
-                    tirar foto
-                  </ion-button>
-                </ion-list>
+                <form>
+                  <ion-list>
+                    <ion-item>
+                      <ion-input
+                        label="Nome Recebedor"
+                        labelPlacement="floating"
+                        type="text"
+                        placeholder="Nome"
+                      ></ion-input>
+                    </ion-item>
+                    <ion-item>
+                      <ion-select label="Documento" placeholder="Selecione">
+                        <ion-select-option value="1">CPF</ion-select-option>
+                        <ion-select-option value="2">CNPJ</ion-select-option>
+                        <ion-select-option value="3">RG</ion-select-option>
+                      </ion-select>
+                    </ion-item>
+                    <ion-item>
+                      <ion-input
+                        label="Número"
+                        labelPlacement="floating"
+                        type="text"
+                        placeholder="Nome"
+                      ></ion-input>
+                    </ion-item>
+                    <div class="ion-justify-content-between">
+                      <ion-button
+                        type="button"
+                        slot="secondary"
+                        (click)="takePicture()"
+                      >
+                        <ion-icon
+                          slot="start"
+                          name="camera-outline"
+                          size="large"
+                          class="ion-padding-horizontal"
+                        ></ion-icon>
+                        tirar foto
+                      </ion-button>
+
+                      <ion-button type="submit">
+                        enviar
+                        <ion-icon
+                          slot="end"
+                          name="paper-plane-outline"
+                        ></ion-icon>
+                      </ion-button>
+                    </div>
+                  </ion-list>
+                </form>
               </ion-card-content>
             </ion-card>
           </ion-content>
