--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true"  class="ion-padding">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Registrar usuário</ion-title>
@@ -19,16 +19,17 @@
     <ion-card-content>
       <form [formGroup]="registerForm" (ngSubmit)="onSubmit($event)">
         <ion-item>
-          <ion-label position="floating">Nome:</ion-label>
-          <ion-input formControlName="name" />
+          <ion-input formControlName="name" labelPlacement="floating" label="Nome" />
         </ion-item>
         <p>
           {{registerForm.get('formControlName')?.errors?.['minlength'] ? 'Nome
           inválido' : ''}}
         </p>
         <ion-item>
-          <ion-label position="floating">CNPJ/CPF:</ion-label>
+
           <ion-input
+            label = "CNPJ/CPF"
+            labelPlacement="floating"
             formControlName="login"
             type="text"
             [(ngModel)]="quantity"
@@ -42,8 +43,10 @@
           inválido' : ''}}
         </p>
         <ion-item>
-          <ion-label position="floating">Telefone:</ion-label>
+
           <ion-input
+          labelPlacement="floating"
+          label="Telefone"
             formControlName="phone"
             [maskito]="maskitoPhoneOptions"
             [maskitoElement]="predicate"
@@ -54,16 +57,16 @@
           inválido' : ''}}
         </p>
         <ion-item>
-          <ion-label position="floating">Senha:</ion-label>
-          <ion-input type="password" formControlName="password" maxlength="8" />
+          <ion-input type="password" labelPlacement="floating" label="Senha" formControlName="password" maxlength="8" />
         </ion-item>
         <p>
           {{registerForm.get('password')?.errors?.['minlength'] ? 'minimo 8
           caracteres' : ''}}
         </p>
         <ion-item>
-          <ion-label position="floating">Confirmar senha:</ion-label>
           <ion-input
+          label="Confirmar senha"
+          labelPlacement="floating"
             type="password"
             formControlName="confirmPassword"
             maxlenght="8"
