--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -181,79 +181,7 @@
           >
         </ion-card-content>
       </ion-card>
-      <ion-modal trigger="open-modal" (willDismiss)="onWillDismiss($event)">
-        <ng-template>
-          <ion-header>
-            <ion-toolbar>
-              <ion-buttons slot="start">
-                <ion-button (click)="cancel()">Cancelar</ion-button>
-              </ion-buttons>
-              <!-- <ion-title class="ion-text-center">Recebedor</ion-title> -->
-              <ion-buttons slot="end" class="ion-align-items-center">
-                <ion-button (click)="confirm()" [strong]="true"
-                  >Confirmar</ion-button
-                >
-              </ion-buttons>
-            </ion-toolbar>
-          </ion-header>
-          <ion-content class="ion-padding" class="">
-            <ion-card>
-              <ion-card-content>
-                <form>
-                  <ion-list>
-                    <ion-item>
-                      <ion-input
-                        label="Nome Recebedor"
-                        labelPlacement="floating"
-                        type="text"
-                        placeholder="Nome"
-                      ></ion-input>
-                    </ion-item>
-                    <ion-item>
-                      <ion-select label="Documento" placeholder="Selecione">
-                        <ion-select-option value="1">CPF</ion-select-option>
-                        <ion-select-option value="2">CNPJ</ion-select-option>
-                        <ion-select-option value="3">RG</ion-select-option>
-                      </ion-select>
-                    </ion-item>
-                    <ion-item>
-                      <ion-input
-                        label="Número"
-                        labelPlacement="floating"
-                        type="text"
-                        placeholder="Nome"
-                      ></ion-input>
-                    </ion-item>
-                    <div class="ion-justify-content-between">
-                      <ion-button
-                        type="button"
-                        slot="secondary"
-                        (click)="takePicture()"
-                      >
-                        <ion-icon
-                          slot="start"
-                          name="camera-outline"
-                          size="large"
-                          class="ion-padding-horizontal"
-                        ></ion-icon>
-                        tirar foto
-                      </ion-button>
-
-                      <ion-button type="submit">
-                        enviar
-                        <ion-icon
-                          slot="end"
-                          name="paper-plane-outline"
-                        ></ion-icon>
-                      </ion-button>
-                    </div>
-                  </ion-list>
-                </form>
-              </ion-card-content>
-            </ion-card>
-          </ion-content>
-        </ng-template>
-      </ion-modal>
+     <app-modal></app-modal>
     </ion-list>
   </ion-content>
 </div>
