--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -61,3 +61,40 @@ ion-card {
   }
 }
 
+.recipient-container-success {
+  background-color: rgba(127, 255, 242, 0.211);
+  display: flex;
+  flex-direction: column;
+  margin: 1rem;
+
+  ion-card-content {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+  }
+}
+
+.recipient-container {
+  background-color: rgba(255, 127, 127, 0.211);
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+}
+
+
+.receipt-content {
+  display: flex;
+  flex-direction: row !important;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  padding: 1rem;
+  gap: 1rem;
+
+  div {
+    all: unset;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
