feat: refactoring code on pages home, register and login

--- a/src/app/pages/document/document.page.html
+++ b/src/app/pages/document/document.page.html
@@ -11,6 +11,9 @@
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Cadastro de Usuários</ion-title>
+      <ion-buttons slot="end" class="ion-padding-end">
+        <ion-back-button defaultHref="/home"></ion-back-button>
+      </ion-buttons>
     </ion-toolbar>
   </ion-header>
 
