--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,31 +1,4 @@
-<ion-menu side="end" contentId="main-content">
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>Menu</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <ion-content class="ion-padding">
-    <ion-list>
-      <ion-item>
-        <ion-icon name="person-circle-outline" slot="start"></ion-icon>
-        <ion-label routerLink="/register" routerLinkActive="active">Registrar novo Usuário</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-icon name="document-attach" slot="start"></ion-icon>
-        <ion-label routerLink="/document" routerLinkActive="active">Registrar novo Documento</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-icon name="people-circle-outline" slot="start"></ion-icon>
-        <ion-label>Usuários Castrados</ion-label>
-      </ion-item>
-      <ion-item (click)="logout()">
-        <ion-icon name="exit" slot="start"></ion-icon>
-        <ion-label>Sair</ion-label>
-      </ion-item>
-    </ion-list>
-  </ion-content>
-</ion-menu>
+<app-side-menu></app-side-menu>
 <div class="ion-page" id="main-content">
   <ion-header>
     <ion-toolbar>
@@ -36,21 +9,23 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-content [fullscreen]="true">
+  <ion-content [fullscreen]="true" class="ion-padding">
     <ion-list>
-      <div>
-        <ion-button expand="block" (click)="scan()"
-          ><ion-icon name="barcode-outline"></ion-icon>
-        </ion-button>
-        <ion-input placeholder="Chave aqui" (ionInput)="changeValueInput($event)" (keyup)="onKeyUp($event)" value="{{valueInput}}" />
-      </div>
+      <ion-card>
+        <div>
+          <ion-button expand="block" (click)="scan()"
+            ><ion-icon name="barcode-outline"></ion-icon>
+          </ion-button>
+          <ion-input placeholder="Chave aqui" (ionInput)="changeValueInput($event)" (keyup)="onKeyUp($event)" value="{{valueInput}}" />
+        </div>
 
-      <div>
-        <ion-button expand="block">
-          <ion-icon name="qr-code-outline"></ion-icon>
-        </ion-button>
-        <ion-input placeholder="Qr code aqui" />
-      </div>
+        <div>
+          <ion-button expand="block">
+            <ion-icon name="qr-code-outline"></ion-icon>
+          </ion-button>
+          <ion-input placeholder="Qr code aqui" />
+        </div>
+      </ion-card>
     </ion-list>
 
     <ion-list>
