--- a/src/app/pages/not-authorized/not-authorized.page.html
+++ b/src/app/pages/not-authorized/not-authorized.page.html
@@ -1,13 +1,12 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>not-authorized</ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">not-authorized</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+<ion-content [fullscreen]="true" >
+  <div>
+    <ion-icon name="sad-outline"></ion-icon>
+    <span>Página disponivel somente para <br/>usuários administradores</span>
+    <ion-button color="light"routerLink="/home" routerlinkActive="active">
+      <ion-icon name="return-down-back-outline" slot="start"></ion-icon>
+      voltar
+    </ion-button>
+  </div>
 </ion-content>
