--- a/src/app/pages/notfound/notfound.page.html
+++ b/src/app/pages/notfound/notfound.page.html
@@ -1,16 +1,10 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>notfound</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">notfound</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-    <ion-icon name="alert-circle-outline"></ion-icon>
-    Pagina não encontrada.
+<ion-content [fullscreen]="true" >
+  <div>
+    <ion-icon name="sad-outline"></ion-icon>
+    <span>Oooops!! <br/> Página não encontrada.</span>
+    <ion-button color="light"routerLink="/home" routerlinkActive="active">
+      <ion-icon name="return-down-back-outline" slot="start"></ion-icon>
+      voltar
+    </ion-button>
+  </div>
 </ion-content>
