--- a/src/app/pages/notfound/notfound.page.scss
+++ b/src/app/pages/notfound/notfound.page.scss
@@ -1,7 +1,20 @@
 ion-content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
+  div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    gap: 1rem;
+  }
+
+  span {
+    text-align: center;
+  }
+
+  ion-icon {
+    font-size: 2rem;
+  }
+
 }
