--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -11,7 +11,7 @@
           <ion-item>
             <ion-input
               labelPlacement="stacked"
-              placeholder="CNPJ/CPF"
+              placeholder="USUARIO"
               type="text"
               formControlName="login"
             >
