--- a/src/app/components/side-menu/side-menu.component.html
+++ b/src/app/components/side-menu/side-menu.component.html
@@ -6,6 +6,19 @@
   </ion-header>
 
   <ion-content class="ion-padding">
+
+    @if(user) {
+      <ion-chip>
+        <ion-avatar class="ion-justify-content-center">
+          <img
+          alt="Silhouette of a person's head"
+          src="https://ionicframework.com/docs/img/demos/avatar.svg"
+          />
+        </ion-avatar>
+        <ion-label>{{user?.name }}</ion-label>
+      </ion-chip>
+    }
+
     <ion-list>
       <ion-item>
         <ion-icon name="person-circle-outline" slot="start"></ion-icon>
@@ -17,7 +30,7 @@
       </ion-item>
       <ion-item>
         <ion-icon name="people-circle-outline" slot="start"></ion-icon>
-        <ion-label>Usuários Castrados</ion-label>
+        <ion-label routerLink="/usuarios" routerLinkActive="active">Usuários Castrados</ion-label>
       </ion-item>
       <ion-item (click)="logout()">
         <ion-icon name="exit" slot="start"></ion-icon>
