--- a/src/app/components/side-menu/side-menu.component.scss
+++ b/src/app/components/side-menu/side-menu.component.scss
@@ -1,9 +1,26 @@
 ion-toolbar {
-  --background: linear-gradient(196deg, rgb(29, 209, 206) 0%, rgb(3, 47, 54) 100%);
+  --background: rgb(3, 47, 54);
   --color: rgb(237, 237, 237);
 }
 
 ion-item {
   cursor: pointer;
   font-size: .9rem;
+}
+
+
+ion-chip {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 1rem;
+  background: transparent;
+  padding: 1rem;
+
+  ion-avatar {
+    width: 48px;
+    height: 48px;
+  }
 }
