--- a/src/app/components/side-menu/side-menu.component.scss
+++ b/src/app/components/side-menu/side-menu.component.scss
@@ -15,9 +15,9 @@ ion-chip {
   gap: 2rem;
   align-items: center;
   justify-content: center;
-  margin-bottom: 1rem;
   background: transparent;
   padding: 1rem;
+  width: 100%;
 
   ion-avatar {
     width: 48px;
