--- a/src/app/components/side-menu/side-menu.component.scss
+++ b/src/app/components/side-menu/side-menu.component.scss
@@ -1,5 +1,5 @@
 ion-toolbar {
-  --background: rgb(3, 47, 54);
+  --background: linear-gradient(196deg, rgb(29, 209, 206) 0%, rgb(3, 47, 54) 100%);
   --color: rgb(237, 237, 237);
 }
 
